CSS: Fixed Gallery pannel miss alignment by declaring clear:both on container

--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -239,7 +239,7 @@ input:focus, textarea:focus {
 
 #logo,
 #menu {
-  line-height: 75px;
+  line-height: 10px;
 }
 
 #menu li {
